--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "npm run build",
+    "start": "npm run build && node dist/index.js",
     "build": "tsc -p .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,17 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.16.0",
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
     "body-parser": "^1.18.3",
-    "concurrently": "^4.0.1",
     "express": "^4.16.3",
     "mongoose": "^5.3.1",
-    "morgan": "^1.9.1",
-    "nodemon": "^1.18.4"
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
+    "@types/morgan": "^1.7.35",
     "tslint": "^5.11.0",
     "typescript": "^3.1.1"
   }
