--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.16.0",
+    "@types/mongoose": "^5.2.18",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongoose": "^5.3.1",
