--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-facebook-login": "^3.6.5",
+    "autobind-decorator": "^2.1.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-facebook-login": "^4.1.1",
     "react-scripts-ts": "3.1.0"
   },
   "scripts": {
@@ -18,7 +21,7 @@
     "@types/node": "^10.11.4",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.8",
-    "tslint-config-prettier": "^1.15.0",
-    "typescript": "^3.1.1"
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.3"
   }
 }
