--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^4.16.0",
     "@types/mongoose": "^5.2.18",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongoose": "^5.3.1",
     "morgan": "^1.9.1"
