--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-bootstrap": "^0.32.14",
     "@types/react-facebook-login": "^3.6.5",
     "autobind-decorator": "^2.1.0",
     "react": "^16.5.2",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
     "react-facebook-login": "^4.1.1",
     "react-scripts-ts": "3.1.0"
